kubernetes/xdm/xdm-appserver-passive.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: -appserver-passive
  labels:
    app: -appserver-passive
spec:
  replicas: 2
  selector:
    matchLabels:
      app: -appserver-passive
  template:
    metadata:
      labels:
        app: -appserver-passive
    spec:
      containers:
        - image: /xdm:5.3.19-passive
          name: -appserver-passive
          resources:
            requests:
              memory: "4Gi"
            limits:
              memory: "5Gi"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: secrets-store01-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "-azure-secret-provider"
---
apiVersion: v1
kind: Service
metadata:
  name: -appserver-passive
  labels:
    app: -appserver-passive
spec:
  ports:
    - port: 8080
  selector:
    app: -appserver-passive
